<resources>
    <string name="app_name">iBato</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="save_changes">Save Changes</string>
    <string name="loading">Loading...</string>
    <string name="logo_description">App Logo</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="change_password">Change Password</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_current_password">Current Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="btn_back"><![CDATA[← Already registered? Sign in now!]]></string>
    <string name="submit">Submit</string>
    <string name="feedback_page_title">Add Feedback</string>

    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="nav_home">Feedbacks</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_explore">Gallery</string>
    <string name="nav_me">Me</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">intro message</string>

    <string name="change_photo">Change Photo</string>

    <!-- fragment tags -->
    <string name="fragment_camera2">Camera2</string>
    <string name="fragment_view_stickers">View Stickers</string>

    <!-- Navigation Drawer -->
    <string name="sample_header_name">Jose Mari Chan</string>
    <string name="sample_header_email">josemari_chan@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="about">About iBato</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="forgot">Forgot Password?</string>

    <string name="app_version">v5.4</string>

    <string name="lorem_ispum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam elementum auctor lacus, vitae suscipit mi accumsan a. Nunc non pharetra nibh. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas sit amet risus a arcu dictum ullamcorper quis non ante. Suspendisse potenti. Cras pulvinar vehicula orci, ac pharetra urna blandit sit amet. Vivamus varius ligula lacus, vestibulum cursus erat tempor nec. Nulla et libero non neque consectetur ultrices. Vivamus ac ipsum felis.</string>

    <string name="app_description">At ibato, we believe that through modern technology we can lessen the loads and stress of people who undergo hemodialysis, which we have come up with the idea of classifying their dietary restriction in vegetable and fruits due to that their kidneys cannot get rid of waste products and fluids from their blood.
\nAt first, we thought about how we will be able to implement it, especially on classifying the dietary restriction of vegetables and fruits. As we do research we found out about Artificial Intelligence is which has helped us in finding the answer to our problem.\n
\nWe dedicate this application to our thesis adviser Ms. Angeline Chrisette Olegario that has helped and motivate us to accomplish this application.</string>

    <string name="terms_and_conditions">The information provided by our application is for general information purposes only. All information on the application is provided in good faith, however, we make no representation or warranty of any kind, express or implied, regarding the accuracy, adequacy, validity, reliability, availability, or completeness of any information on our mobile application.
\n\nUnder no circumstances shall we have any liability to you for any loss or damage of any kind incurred as a result of the use of our application and your reliance on any kind of information on our mobile application is solely at your own risk.
\n\nThe content is not intended to be a substitute for professional medical advice, diagnosis, or treatment. Always seek the advice of your physician or other qualified health providers with any questions you may have regarding a medical condition.</string>
</resources>
