<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        android:state_checked="false"/>

    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_gallery"
        android:title="@string/nav_gallery"
        android:state_checked="true"/>

    <item
        android:id="@+id/nav_2"
        app:showAsAction="ifRoom"
        android:enabled="false" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        android:state_checked="false"/>

    <item
        android:id="@+id/nav_3"
        android:icon="@drawable/ic_account"
        android:title="@string/nav_me"
        android:state_checked="false"/>

<!--    <item-->
<!--        android:id="@+id/nav_logout"-->
<!--        android:title="@string/logout"-->
<!--        app:showAsAction="never"/>-->
</menu>