<?xml version="1.0" encoding="utf-8"?>
    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context=".SignUpActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="70dp">

        <Button
            android:id="@+id/menu_button"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:icon="@drawable/ic_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="24dp"
            android:text="@string/profile"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/default_photo"

            app:civ_border_width="2dp"
            app:civ_border_color="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/account_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/change_photo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/change_photo"


            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/account_name"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/account_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"

            app:boxBackgroundColor="#112BD88E"
            app:startIconDrawable="@drawable/account_circle"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"

            android:hint="@string/name"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_photo_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/account_name_input"
                android:inputType="textCapWords"
                android:singleLine="true"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"

            app:boxBackgroundColor="#112BD88E"
            app:startIconDrawable="@drawable/email"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"

            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input"
                android:inputType="textEmailAddress"
                android:singleLine="true"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"

            app:boxBackgroundColor="#112BD88E"
            app:startIconDrawable="@drawable/email"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"

            android:hint="@string/prompt_address"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address_input"
                android:inputType="textCapWords"
                android:singleLine="true"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"

            app:boxBackgroundColor="#112BD88E"
            app:startIconDrawable="@drawable/email"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"

            android:hint="@string/prompt_phone"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_input"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

    <!--    <com.google.android.material.textfield.TextInputLayout-->
    <!--        android:id="@+id/password"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="24dp"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:layout_marginEnd="24dp"-->

    <!--        app:boxBackgroundColor="#112BD88E"-->
    <!--        app:startIconDrawable="@drawable/lock"-->
    <!--        app:endIconMode="password_toggle"-->
    <!--        app:errorEnabled="true"-->
    <!--        app:errorTextAppearance="@style/error_appearance"-->

    <!--        android:hint="@string/prompt_password"-->
    <!--        android:imeActionLabel="@string/action_sign_in_short"-->
    <!--        android:imeOptions="actionDone"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:selectAllOnFocus="true"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/email" >-->

    <!--        <com.google.android.material.textfield.TextInputEditText-->
    <!--            android:id="@+id/password_input"-->
    <!--            android:inputType="textPassword"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"/>-->

    <!--    </com.google.android.material.textfield.TextInputLayout>-->

        <Button
            android:id="@+id/save_changes"
            android:backgroundTint="@color/gradient_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"

            android:textColor="@color/white"
            android:text="@string/save_changes"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone" />

        <Button
            android:id="@+id/change_password"
            style="@style/Widget.App.Button.OutlinedButton.IconOnly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/change_password"
            android:textColor="@color/black"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_changes" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
