<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/change_password_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/current_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"

        app:boxBackgroundColor="#112BD88E"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"

        android:hint="@string/prompt_current_password"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/current_password_input"
            android:inputType="textPassword"
            android:singleLine="true"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"

        app:boxBackgroundColor="#112BD88E"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"

        android:hint="@string/prompt_new_password"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:inputType="textPassword"
            android:singleLine="true"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"

        app:boxBackgroundColor="#112BD88E"
        app:startIconDrawable="@drawable/lock"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/error_appearance"

        android:hint="@string/prompt_confirm_password"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_input"
            android:inputType="textPassword"
            android:singleLine="true"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>



</androidx.constraintlayout.widget.ConstraintLayout>